fixes #4377 update dijit.css to include cursor:pointer on dijitExpandoText - this is the only occurrence I could find where the cursor was incorrect in high contrast mode.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@11796 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1060,6 +1060,7 @@ img.dijitColorPaletteUnder {
 	font-family: monospace;
 	border-style: solid;
 	border-width: thin;
+	cursor: pointer;
 }
 
 /* Dialog */
